# cxx-qt-sfos

./: README.md
crates/cxx-qt/: Cargo.toml
crates/cxx-qt-build/: Cargo.toml
crates/cxx-qt-build/src/: lib.rs
crates/cxx-qt-gen/: Cargo.toml
crates/cxx-qt-gen/src/generator/cpp/: invokable.rs  types.rs
crates/cxx-qt-gen/src/generator/naming/: invokable.rs  property.rs  qobject.rs
crates/cxx-qt-gen/src/parser/: cxxqtdata.rs
crates/cxx-qt-gen/src/writer/cpp/: header.rs  mod.rs
crates/cxx-qt-gen/src/writer/rust/: mod.rs
crates/cxx-qt-lib/: Cargo.toml  build.rs
crates/cxx-qt-lib-headers/: Cargo.toml
crates/cxx-qt-lib-headers/include/: common.h  cxxqt_thread.h
crates/cxx-qt-lib-headers/include/core/: qdatetime.h  qpointf.h  qstring.h
crates/cxx-qt-lib-headers/src/: lib.rs
crates/cxx-qt-lib/src/core/: mod.rs  qbytearray.rs  qdate.rs  qdatetime.cpp  qdatetime.rs  qmargins.rs  qmodelindex.rs  qpersistentmodelindex.rs  qpoint.rs  qpointf.rs  qrect.rs  qsize.rs  qstring.cpp  qstring.rs  qstringlist.rs  qt.rs  qtime.rs  qtimezone.rs
crates/cxx-qt-lib/src/core/qhash/: qhash.cpp
crates/cxx-qt-lib/src/core/qlist/: mod.rs
crates/cxx-qt-lib/src/core/qmap/: qmap.cpp
crates/cxx-qt-lib/src/core/qmarginsf/: mod.rs  qmarginsf32.cpp  qmarginsf32.rs  qmarginsf64.cpp
crates/cxx-qt-lib/src/core/qpointf/: mod.rs  qpointf32.cpp  qpointf32.rs  qpointf64.cpp
crates/cxx-qt-lib/src/core/qrectf/: mod.rs  (+4 more)
crates/cxx-qt-lib/src/gui/: qcolor.cpp  qcolor.rs
crates/cxx-qt/src/: lib.rs
crates/qt-build-utils/: Cargo.toml
crates/qt-build-utils/src/: lib.rs
(+6 files in other folders)
