# SPDX-FileCopyrightText: 2021 Klarälvdalens Datakonsult AB, a KDAB Group company <info@kdab.com>
# SPDX-FileContributor: Andrew Hayzen <andrew.hayzen@kdab.com>
# SPDX-FileContributor: Gerhard de Clercq <gerhard.declercq@kdab.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0
[package]
name = "cxx-qt-build"
version = "0.5.1"
authors = ["Andrew Hayzen <andrew.hayzen@kdab.com>", "Gerhard de Clercq <gerhard.declercq@kdab.com>", "Leon Matthes <leon.matthes@kdab.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Helpers for integrating `cxx-qt` crate into a Cargo build"

[dependencies]
cc = "1.0.74"
convert_case = "0.6"
cxx-gen = "0.7.86"
cxx-qt-lib-headers = { path = "../cxx-qt-lib-headers" }
cxx-qt-gen = { path = "../cxx-qt-gen" }
proc-macro2 = "1.0"
quote = "1.0"
qt-build-utils = { path = "../qt-build-utils" }

[features]
default = ["qt_gui", "qt_qml"]
qt_gui = ["cxx-qt-lib-headers/qt_gui"]
qt_qml = ["cxx-qt-lib-headers/qt_qml"]
